[package]
name = "btc_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = { version = "0.13.3", features = ["serde", "pem"] }
ecdsa = { version = "0.16.9", features = ["signing", "verifying",
"serde", "pem"] }
chrono = { version = "0.4.38", features = ["serde"]} 
hex = "0.4.3"
ciborium = "0.2.2"
sha256 = "1.5.0"
uint = "0.9.5"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
serde = { version = "1.0.198", features = ["derive"] }
rand = "0.8.5"
thiserror = "2.0.3"
bigdecimal = "0.4.6"
